--- a/app/src/main/res/layout/activity_create_spending.xml
+++ b/app/src/main/res/layout/activity_create_spending.xml
@@ -245,6 +245,41 @@
         app:layout_constraintStart_toStartOf="@+id/guidelineStart"
         app:layout_constraintEnd_toEndOf="@+id/guidelineEnd" />
 
+    <!-- Attachment and Upload Button -->
+    <TextView
+        android:id="@+id/txtAttachmentSpending"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/Attachment"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@+id/edtCommentSpending"
+        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
+
+    <Button
+        android:id="@+id/btnUploadImageSpending"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/Upload"
+        android:background="@drawable/rounded_frame_background"
+        app:layout_constraintStart_toEndOf="@+id/txtAttachmentSpending"
+        app:layout_constraintTop_toTopOf="@+id/txtAttachmentSpending" />
+
+    <TextView
+        android:id="@+id/txtImageAddedSpending"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Image added"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/btnUploadImageSpending"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <!-- Buttons -->
     <Button
         android:id="@+id/btnCancelSpending"
