--- a/app/src/main/res/layout/alarm_badge_layout.xml
+++ b/app/src/main/res/layout/alarm_badge_layout.xml
@@ -1,24 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+    <!-- Alarm Icon -->
     <ImageView
         android:id="@+id/alarm_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:src="@drawable/ic_alarm" />
 
-    <!-- Badge -->
+    <!-- Badge Count -->
     <TextView
         android:id="@+id/badge_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:background="@drawable/badge_background"
         android:textColor="@android:color/white"
-        android:textSize="12sp"
+        android:textSize="10sp"
         android:gravity="center"
-        android:padding="2dp"
-        android:layout_gravity="end|top"
-        android:visibility="gone" /> <!-- Initially hidden -->
+        android:layout_gravity="start|top"
+        android:layout_marginEnd="-6dp"
+        android:layout_marginTop="-3dp"
+        android:padding="1dp"
+        android:visibility="gone" />
 </FrameLayout>
