--- a/app/src/main/res/layout/alarm_badge_layout.xml
+++ b/app/src/main/res/layout/alarm_badge_layout.xml
@@ -1,13 +1,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="end">
 
     <!-- Alarm Icon -->
     <ImageView
         android:id="@+id/alarm_icon"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:src="@drawable/ic_alarm" />
+        android:src="@drawable/ic_alarm"
+        android:layout_gravity="end|center_vertical"/>
 
     <!-- Badge Count -->
     <TextView
@@ -18,7 +20,7 @@
         android:textColor="@android:color/white"
         android:textSize="10sp"
         android:gravity="center"
-        android:layout_gravity="start|top"
+        android:layout_gravity="end|top"
         android:layout_marginEnd="-6dp"
         android:layout_marginTop="-3dp"
         android:padding="1dp"
