--- a/app/src/main/res/layout/activity_my_income.xml
+++ b/app/src/main/res/layout/activity_my_income.xml
@@ -80,8 +80,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="#FFFFFF"
-                app:itemIconTint="@color/black"
-                app:itemTextColor="#000000"
+                app:itemIconTint="@color/nav_item_color_selector"
+                app:itemTextColor="@color/nav_item_color_selector"
                 app:itemTextAppearanceActive="@style/BottomNavTextStyle"
                 app:itemTextAppearanceInactive="@style/BottomNavTextStyle"
                 app:menu="@menu/bottom_nav"
