--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="header_text">#37474F</color>
     <color name="colorAccent">#023047</color>
     <color name="colorPrimary">#Fb8500</color>
+    <color name="colorSecondary">#023047</color>
 
     <color name="active_color"> #FF000000</color>
     <color name="inactive_color"> #D3D3D3</color>
