--- a/app/src/main/res/layout/items_notifications.xml
+++ b/app/src/main/res/layout/items_notifications.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -36,6 +35,17 @@
             app:layout_constraintStart_toEndOf="@id/labelTitleNotification"
             app:layout_constraintTop_toTopOf="@id/labelTitleNotification"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <!-- Orange Dot for Unread Notifications -->
+        <ImageView
+            android:id="@+id/unreadDot"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/circle_orange"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tvTitleNotification" />
 
         <!-- Amount Label -->
         <TextView
