--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,6 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group>
         <item
+            android:id="@+id/nav_item_premium"
+            android:icon="@drawable/abc_vector_test"
+            android:title="Unlock Premium Features"
+            android:actionLayout="@layout/nav_item_premium"
+            android:background="@drawable/nav_item_background_light"
+             />
+        <item
             android:id="@+id/nav_item_aboutus"
             android:icon="@drawable/abc_vector_test"
             android:title="About Us"
